# backframe

./: pyproject.toml  scripts.py
src/: backframe
src/backframe/: __init__.py  event.py  logging.py  utils.py
src/backframe/persistence/: __init__.py  core.py  counter.py
tests/: test_persistence.py
